new changes more dashboard

--- a/client/src/assets/scss/_themes-vars.module.scss
+++ b/client/src/assets/scss/_themes-vars.module.scss
@@ -9,11 +9,11 @@ $primary200: #90caf9;
 $primary800: #1565c0;
 
 // secondary
-$secondaryLight: #ede7f6;
-$secondaryMain: #673ab7;
-$secondaryDark: #5e35b1;
-$secondary200: #b39ddb;
-$secondary800: #4527a0;
+$secondaryLight: #e0b8bf;
+$secondaryMain: #7F0220;
+$secondaryDark: #7F0220;
+$secondary200: #e0b8bf;
+$secondary800: #7F0220;
 
 // success Colors
 $successLight: #b9f6ca;
