--- a/client/src/assets/scss/_theme6.module.scss
+++ b/client/src/assets/scss/_theme6.module.scss
@@ -12,7 +12,7 @@ $primary800: #283593;
 $secondaryLight: #e8eaf6;
 $secondaryMain: #3f51b5;
 $secondaryDark: #3949ab;
-$secondary200: #9fa8da;
+$secondary200: #e0b8bf;
 $secondary800: #283593;
 
 // success Colors
